# bifrost

./: .env.debug  .gitignore  .sonarcloud.properties  AGENTS.md  CLAUDE.md  Initialize-Bifrost.ps1  debug.sh  docker-compose.debug.port.yml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties  test.sh
api/: Dockerfile  Dockerfile.dev  pyproject.toml
api/alembic/versions/: 20260501a_summary_backfill_idempotency.py  20260504_merge_main_into_chat_v2.py  20260522_codex_gateway.py  20260606_solution_config_schema.py  20260617_compaction_checkpoint.py  20260617_merge_chat_v2_into_main.py  20260617_solution_deploy_jobs.py  20260618_message_artifacts.py  20260621_add_file_policies.py  20260623_file_solution_id.py  20260623_policy_rules.py  (+6 more)
api/bifrost/: _context.py  _solution_workspace.py  cli.py  client.py  contract_version.py  credentials.py  dto_flags.py  events.py  executions.py  field_classes.py  files.py  ignore_patterns.py  integrations.py  manifest.py  manifest_codec.py  migrate_v2.py  models.py  platform_names.py  portable.py  skill.py  solution_binding.py  solution_descriptor.py  solution_jobs.py  tables.py  workflows.py
api/scripts/: init_container.py  quality_api.sh
api/shared/: app_authorization.py  contract_version.py  execution_timeseries.py  external_access.py  file_policies.py  file_policies_seed.py  model_resolver.py  models.py  policy_rules.py  scope_resolver.py  svg_sanitizer.py  table_policies.py
api/src/: config.py  main.py
api/tests/: conftest.py
(+1022 files in other folders)
