[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bifrost-sdk"
version = "1.0.0"
description = "Bifrost Platform SDK"
requires-python = ">=3.11"

[project.scripts]
bifrost = "bifrost.cli:main"

# Deterministic subpackage inclusion: an explicit `packages = ["bifrost"]`
# list leaves bifrost.commands / bifrost.contracts inclusion up to the
# builder's setuptools version (a pipx source install shipped without
# bifrost.commands). find + include pins the recursive behavior.
[tool.setuptools.packages.find]
include = ["bifrost*"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=. --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:"
]